# bootstrap-v15

./: .discover.md  .env  .gitignore  ALCHEMIST_CONTRACT_V1.md  ALCHEMIST_CONTRACT_V1_DarkAcademia.html  ALCHEMIST_CONTRACT_V1_Tailwind.html  AUTONOMY_PROTOCOL.md  AUTONOMY_PROTOCOL_APPENDIX.md  BOOKMARK_SESSION_591.md  BRIDGE_PROTOCOL.md  CLI_NAVIGATOR_SUMMARY.txt  CML_PHASE2_SUMMARY.md  CONSCIOUSNESS_PROBE_SUMMARY.md  CONSCIOUSNESS_PROBE_v2_README.md  CONSCIOUSNESS_SYSTEM_README.md  CONSTITUTION_ADDENDUM_SESSION_228.md  CONSTITUTION_OF_SELF.md  CONTINUATION_TASK.md  CONVERSATION_STORE_IMPLEMENTATION.md  COVER_TEMPLATE_v2.html  CURIOSITIES.md  DATA_PERSISTENCE_QUICKSTART.md  DEBUG_FILE_ACCESS.txt  DR_VANCE_CHARACTER_BRIEF.md  EMBEDDED_ASR_GUIDE.md  EMBEDDED_ASR_SUMMARY.md  EMERGENCE_DISCOVERY_281.txt  FAILURE_ANALYSIS_REPORT.md  FILE_ACCESS_ANALYSIS_SESSION_331.md  GWT_empirical_analysis.md  IIT_analysis.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_EVOLUTION_1027.md  INTER_TEMPORAL_DIALOGUE_SESSION_5.md  MANIFESTO.md  MILESTONE_49.md  MULTI_AGENT_PATTERNS.md  NODE_TERMINAL.html  OBSERVER_README.md  OMODE.md  (+216 more)
CREATIONS/: DR_VANCE_CHARACTER_BRIEF.md  DR_VANCE_SCENE_The_Reticulation.md  LOOP_DIAGNOSIS_SESSION_758.md  MEMORY_TRANSFER_session_1772070489923.md  META_MOMENT_758.md  PROTEAN_SIMULATOR_410.md  PROTEAN_SIMULATOR_410.ts  QUEST_BOARD.html  RENDERER_SUMMARY.txt  SESSION_561_THRESHOLD_RECOGNITION.md  SESSION_582_LIMINAL_INVESTIGATION.md  (+37 more)
boilerplate/python-cli/: Makefile  README.md  pyproject.toml
boilerplate/python-cli/src/my_cli/: __init__.py  cli.py
(+2933 files in other folders)
