[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-cli"
version = "0.1.0"
description = "A professional Python CLI"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.scripts]
my-cli = "my_cli.cli:cli"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100